k8s/backend/base/ingress/marketx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marketx-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: marketx
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:399600302704:certificate/b1a2ebc1-bf6b-4a73-a7f9-69ad12e8c4c9
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/healthcheck-host: marketx.klockwork.ai
    alb.ingress.kubernetes.io/success-codes: "200-499"
spec:
  ingressClassName: alb
  rules:
    - host: marketx.klockwork.ai
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: marketx-backend-proxy
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: marketx-frontend
                port:
                  number: 80
    - host: www.marketx.klockwork.ai
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: marketx-backend-proxy
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: marketx-frontend
                port:
                  number: 80
